<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="player_1">Player 1 </string>
    <string name="player_2">Player 2 </string>
    <string name="tic_tac_toe">TIC TAC TOE</string>лиш
    <string name="OFFLINE">START OFFLINE GAME</string>
    <string name="ONLINE">START ONLINE GAME</string>
    <string name="RANK">RANK</string>
    <string name="online_players">ONLINE PLAYERS</string>
    <string name="game_requests">GAME REQUESTS</string>
    <string name="log_in">LOG IN</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="home">Home</string>
    <string name="_5">5</string>
    <string name="final_score_is">Final Score Is:</string>
    <string name="please_enter_your_password">please enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="end_game">End Game</string>
    <string name="reset">Reset</string>
    <string name="welcome_username">Welcome, USERNAME!</string>
    <string name="welcome_name">Welcome, %s!</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_error">Enter a valid email</string>
    <string name="password_error">Enter password longer than 8 characters</string>
    <string name="phone_error">Enter a valid phone</string>
    <string name="name_error">Enter a valid name</string>
    <string name="reg_success">Registered successfully!</string>
    <string name="name_regex">^[A-Za-z]+$</string>
    <string name="name_path">users/%s/name"</string>
    <string name="connection_error">Please check your connection!</string>
    <string name="hello_play_game_fragment">Hello play_game fragment</string>
    <string name="profile">Profile</string>
    <string name="enter_new_email">Enter new email:</string>
    <string name="enter_new_name">Enter new name:</string>
    <string name="tictactoes">TicTacToes</string>
    <string name="play_game">PlayGame</string>
    <string name="save">save</string>
    <string name="upload_new">Upload image</string>
    <string name="profile_image">profile image</string>
    <string name="failed_load_image">Failed to load image</string>
    <string name="no_image">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="name_updated">Name updated</string>
    <string name="email_updated">User email address updated.</string>
    <string name="uploading">Uploading</string>
    <string name="ven_details">TicTacToe Details</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="email_text">Email:</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit profile</string>
    <string name="start_game">Start game</string>
    <string name="back">Go back</string>
    <string name="reset_password">Reset password</string>
    <string name="failed_to_send_email">Failed to send reset email!</string>
    <string name="sent_intstructions_to_reset_password">We have sent you instructions to reset your password!</string>
    <string name="player_x">Player X</string>
    <string name="player_0">Player O</string>
    <string name="_3x3_game_size">3x3 game size</string>
    <string name="play_3x3_size">Play 3x3 size</string>
    <string name="play_5x5_size">Play 5x5 size</string>

</resources>