<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"

    tools:context=".fragments.ProfileFragment"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/profile_image"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_image_button"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/upload_new" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="6dp"
                android:textSize="18sp" />
        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_email"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_new1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_new"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_email_button"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/update" />
        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_name"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_new1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_new"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_name_button"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/update" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out_button"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/sign_out" />
    </LinearLayout>
</ScrollView>