<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/offline"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:onClick="startOffLineGame"
        android:text="@string/OFFLINE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="188dp" />

    <Button
        android:id="@+id/rank"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:text="@string/RANK"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/online"
        android:onClick="startOnLineGame"/>

    <Button
        android:id="@+id/online"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:text="@string/ONLINE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offline"
        android:onClick="ShowRank"/>
</androidx.constraintlayout.widget.ConstraintLayout>