<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/name_sign_up"
                style="@style/modifiedEditText"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/phone_sign_up"
                style="@style/modifiedEditText"
                android:hint="Mobile Number"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/email_sign_up"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/password_sign_up"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/sign_in_link"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/sign_up" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
